# ENCE464_FitnessMonitorV2

./: .cproject  .gitignore  .gitlab-ci.yml  .project  ADC_read.c  ADC_read.h  ADCdemo1.c  ADCdemo2.c  CMAKE.md  FAQ.md  README.md  TOOLCHAIN.md  accl_manager.c  accl_manager.h  button_manager.c  button_manager.h  buttons4.c  buttons4.h  circBufT.c  circBufT.h  circBufV.c  circBufV.h  display_manager.c  display_manager.h  make.mk  readAcc2.c  serialAcc.c  serial_sender.c  serial_sender.h  startup.c  step_counter_main.c  step_counter_main.h  switches.c  switches.h  system_diagram.drawio  tiva-freertos.mk  v2-ui-spec.md
.launches/: ENCE361_Project.launch  Week3Lab.launch  Week4Lab.launch
Debug/: ENCE361_Project_linkInfo.xml  Week3Lab_linkInfo.xml  Week4Lab_linkInfo.xml  buttons4.d  ccsObjs.opt  circBufV.d  i2c_driver.d  makefile  serialAcc.d  tm4c123gh6pm_startup_ccs.d  ustdlib.d
Debug/OrbitOLED/: OneDrive - University of OrbitOLEDInterface.d_raw
Debug/OrbitOLED/lib_OrbitOled/: OneDrive - University of ChrFont0.d_raw  OneDrive - University of FillPat.d_raw  OneDrive - University of OrbitOled.d_raw  OneDrive - University of OrbitOledChar.d_raw  OneDrive - University of OrbitOledGrph.d_raw  OneDrive - University of delay.d_raw
OrbitOLED/lib_OrbitOled/: OrbitOledGrph.c
SW-TM4C-2.2.0.295/driverlib/: interrupt.c
cmake/: program.cmake  tm4c.cmake
demos/: CMakeLists.txt
demos/blinky/: CMakeLists.txt  Makefile
demos/pulse-timer/: Makefile  pulse-timer.c
demos/pwm-oled/: Makefile
demos/timer-interrupts/: CMakeLists.txt  Makefile
demos/usb_serial/: Makefile
docs/: cli.md  cmake.md  faq.md  toolchain.md  vs-code.md
docs/fitness-monitor-v1/: v1-requirements.md
fitness-tracker/: Makefile  accl_manager.c  circBufV.c  display_manager.h
labs/guide4-mocks/mocks/: circBufT_mock.h
labs/guide4-mocks/mocks/tiva_mocks/: adc_mock.h  sysctl_mock.h
labs/labsheet3-unit-testing/: test_circular_buffer.c
labs/labsheet4-mocks/: test_adc.c
labs/labsheet4-mocks/mocks/tiva_mocks/: adc_mock.h
labs/labsheet6-tdd/: test_adc_hal.c
libs/OrbitOLED/: CMakeLists.txt  OrbitOLEDInterface.h  orbit-oled.mk
libs/freertos/: CMakeLists.txt  freertos.mk  version.txt
libs/tivaware/: CMakeLists.txt  tivaware.mk  version.txt
scripts/: debug.gdb
src/: Makefile  button_manager.c  button_manager.h  serial_sender.c  switches.c  switches.h
test-apps/blinky/: blinky.c
test-apps/pwm-oled/: Makefile  pwm-oled.c
test-apps/timer-interrupts/: timer-interrupts.c
test-apps/usb_serial/: Makefile  usb_serial.c
tests/: CMakeLists.txt  README.md  new_goal_covering_test.c  test-fff.c  test.c  test_accl_manager.c  test_adc.c  test_adc_hal.c  test_circular_buffer.c  test_display_hal.c  test_display_manager.c  test_example.c  test_fff.c  test_i2c_hal.c  test_imu_hal.c  test_new_goal_reader.c  test_temp_hal.c  test_temp_manager.c  test_timer_hal.c
tests/mocks/: OLED_mock.h  OrbitOLEDInterface_mock.h  adc_hal_mock.h  buttons4_mock.h  circBufT_mock.h  circBufV_mock.h  device_state_mock.h  display_hal_mock.h  display_manager_mock.h  i2c_hal_mock.h  imu_hal_mock.h  portmacro.h  prompt_to_move_mock.h  step_counter_main_mock.h  switches_mock.h  temp_hal_mock.h  temp_manager_mock.h  ustdlib_mock.h
tests/mocks/orbit_mocks/: OLED_mock.h
tests/mocks/rtos/: config_mock.h  queue_mock.h  task_mock.h
tests/mocks/rtos_mocks/: rtos_mock.h  rtos_wrapper.c
tests/mocks/tiva_mocks/: adc_mock.h  gpio_mock.h  i2c_mock.h  sysctl_mock.h  timer_mock.h
tests/unity/: CMakeLists.txt  add_unity_tests.cmake  unity.c
tests/unity/auto/: generate_test_runner.rb
tivaware/utils/: ustdlib.c
toolchains/: host.mk  tm4c.mk
